Still not clear how to build the coarse tiles

--- a/povray/Makefile
+++ b/povray/Makefile
@@ -505,7 +505,7 @@ spectrefractalsub.png: spectrebd.pov spectresubdivision.inc
 # Spectre inflation
 #
 
-spectreinflationfasi=1 2 3 4 5 6
+spectreinflationfasi=1 2 3 4 5 6 7 8
 spectreinflation=$(spectreinflationfasi:%=spectreinflation_%.png)
 spectreinflationpngs: $(spectreinflation)
 
